ajuste de mensajes

--- a/templates/seccion/preguntas.html
+++ b/templates/seccion/preguntas.html
@@ -4,7 +4,7 @@
 
             <div class="title text-center">
 
-				<h3>{{seccionWeb[7].contenedor[0].titulo}}</h3>
+				<h3>{{seccionWeb[10].titulo}}</h3>
 
 			</div><!-- headline -->
 
@@ -15,12 +15,7 @@
 <div class="container text-center" ng-if="seccionWeb">
     <div class="row">
         <div class="col-md-12">
-            <h5><strong>{{seccionWeb[7].contenedor[0].subtitulo}}</strong></h5>
-			<br>
-			<div ng-bind-html="seccionWeb[7].contenedor[0].contenido"></div>
-			<br>
-			<p ng-show="seccionWeb[7].contenedor[0].tiene_boton"><a class="btn btn-default-1 waves" href="#">Discover</a></p>
-			<br class="hidden-lg hidden-md">
+			<div ng-bind-html="seccionWeb[10].contenido"></div>
         </div><!-- col -->
 
     </div><!-- row -->
