--- a/templates/seccion/aviso-legal.html
+++ b/templates/seccion/aviso-legal.html
@@ -4,7 +4,7 @@
 
             <div class="title text-center">
 
-				<h3>{{seccionWeb[5].contenedor[0].titulo}}</h3>
+				<h3>{{seccionWeb[8].titulo}}</h3>
 
 			</div><!-- headline -->
 
@@ -15,11 +15,8 @@
 <div class="container text-center" ng-if="seccionWeb">
     <div class="row">
         <div class="col-md-12">
-            <h5><strong>{{seccionWeb[5].contenedor[0].subtitulo}}</strong></h5>
+			<div ng-bind-html="seccionWeb[8].contenido"></div>
 			<br>
-			<div ng-bind-html="seccionWeb[5].contenedor[0].contenido"></div>
-			<br>
-			<p ng-show="seccionWeb[5].contenedor[0].tiene_boton"><a class="btn btn-default-1 waves" href="#">Discover</a></p>
 			<br class="hidden-lg hidden-md">
         </div><!-- col -->
 
